--- a/css/nav.css
+++ b/css/nav.css
@@ -21,3 +21,10 @@ nav {
   margin-left: auto;
   text-align: right;
 }
+
+.main-nav-links {
+  margin: 0 10px;
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
+}
